--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,23 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "bun run generate-routes && vite",
+    "build": "bun run generate-routes tsc -b && vite build",
     "lint": "eslint .",
+    "generate-routes": "tsr generate",
+    "watch-routes": "tsr watch",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.131.26",
+    "@tanstack/react-router-devtools": "^1.131.26",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tanstack/router-cli": "^1.131.26",
+    "@tanstack/router-plugin": "^1.131.26",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
